--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="State" asp-action="Add">State</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="State" asp-action="List">All State</a>
+                            <a class="nav-link text-dark" target="_blank" asp-area="" asp-controller="State" asp-action="List">All State</a>
                         </li>
                     </ul>
                 </div>
