--- a/Views/State/List.cshtml
+++ b/Views/State/List.cshtml
@@ -12,15 +12,15 @@
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-striped table-bordered table-hover align-middle">
-                <thead class="table-dark">
+            <table class="table table-bordered table-hover align-middle">
+                <thead class="table-secondary">
                     <tr>
                         <th class="d-none">ID</th>
                         <th>State Name English</th>
                         <th>State Name Hindi</th>
-                        <th>State Name Code</th>
-                        <th>Subscribed</th>
+                        <th>State Code</th>
                         <th>Status</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -31,7 +31,7 @@
                             <td>@state.StateNameEnglish</td>
                             <td>@state.StateNameHindi</td>
                             <td>@state.StateNameCode</td>
-                            <td>@(state.Status ? "Yes" : "No")</td>
+                            <td>@(state.Status ? "Active" : "Inactive")</td>
                             <td>
                                 <a class="btn btn-sm btn-warning" asp-controller="State" asp-action="Edit" asp-route-id="@state.Id">
                                     Edit
